--- a/src/less/var.less
+++ b/src/less/var.less
@@ -1,7 +1,7 @@
-@primary-color: #F6C000; // 全局主色
+@primary-color: #026281; // 全局主色
 @link-color: #0d0d0d; // 链接色
 @success-color: #52c41a; // 成功色
-@warning-color: #faad14; // 警告色
+@warning-color: #FABF35; // 警告色
 @error-color: #f5222d; // 错误色
 @font-size-base: 1vw; // 主字号
 @heading-color: #0d0d0d; // 标题色
@@ -14,3 +14,5 @@
   0 9px 28px 8px rgba(0, 0, 0, 0.05); // 浮层阴影
 
 @template-nav-bg-color :transparent;
+@secondary-color: #FABF35;
+@primary-color-dark: #004F68;
