--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,14 +1,42 @@
 @import './var.less';
-@import url('https://fonts.googleapis.com/css2?family=Noto+sans+TC:wght@200;300;400;500;600;700;900&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Noto+Sans+TC:wght@100;300;400;500;700;900&family=Noto+Serif+TC:wght@200;300;400;500;600;700;900&display=swap');
 html{
     font-size: 1vw;
 }
 body{
-    font-family: 'Noto Serif TC','Urbanist', sans-serif;
+    font-family: 'Josefin Sans', 'Noto Sans TC', sans-serif;
+}
+//container
+.container{
+  width: 100%;
+  max-width: 1548px;
+  margin: 0 auto;
+}
+
+// header
+#header{
+  z-index: 99;
+}
+.headerTranprent{
+  color: #fff;
+  background-color: transparent;
+  position: fixed;
+  width: 100%;
+  & li a{
+    color: #fff;
+    &:hover ::after{
+      content: '';
+      position: absolute;
+      height: 1px;
+      width: 100%;
+    }
+  }
+  
 }
 .header-container{
+    position: relative;
     height: 6.25rem;
-    padding:0.5rem 1rem 0 1rem;
+    padding:1.5rem 3rem 0 3rem;
     & > div{
         height: 100%;
     }
@@ -18,6 +46,7 @@ body{
     align-items: center;
     justify-content: flex-start;
     height: 100%;
+    width: 11.6rem;
 }
 .header-menu{
     height: 100%;
@@ -26,17 +55,42 @@ body{
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    margin: 0;
+    padding: 0;
+    & .ant-dropdown-trigger span{
+      display: none;
+    }
     & li{
         padding: 0 .5rem;
         & a{
-            font-size: 1rem;
+            font-size: 0.8rem;
             display: inline-block;
+            &:hover,:active{
+              color: #fff;
+            }
+            & span{
+              position: relative;              
+            }            
+            & span::after{
+              content: '';
+              width: 100%;
+              height: 1px;
+              background-color: rgba(255, 255, 255, .7);
+              position: absolute;
+              bottom: 0;
+              left: 0;
+              transition: all .3s;
+              transform-origin: center;
+              transform: scaleX(0);
+            }
+            &:hover span::after{
+              transform: scaleX(100%);
+            }
         }
     }
 }
 
-@header2: header2;
-.@{header2} {
+.header {
   background: @template-nav-bg-color;
   width: 100%;
   z-index: 1;
@@ -60,8 +114,7 @@ body{
     }
   }
   &-menu {
-    float: right;
-    >.menu-item {
+      >.menu-item {
       line-height: 62px;
       display: inline-block;
       padding: 0 20px;
@@ -82,7 +135,7 @@ body{
 }
 
 @media screen and (max-width: 767px) {
-  .@{header2} {
+  .header {
     &-logo {
       z-index: 101;
     }
@@ -153,4 +206,85 @@ body{
     }
     
   }
+}
+
+// footer
+.footer{
+  font-size: 0.93rem;
+  padding: 12.5rem 0 7.125rem 0;
+  background-color: @primary-color-dark;
+  color: rgba(255, 255, 255, .6);
+  & p{
+    font-weight: 300;
+  }
+  & a{
+    color: rgba(255, 255, 255, .6);
+  }
+  & a:hover, a:focus{
+    color: rgba(255, 255, 255,1);
+  }
+  & h6{
+    font-size: 1.25rem;
+    color: rgba(255, 255, 255, .6);
+  }
+  & .ant-row{
+    margin-bottom: 3rem;
+  }
+  & .ant-divider{
+    border-top: 1px solid rgba(255, 255, 255, .3);
+  }
+}
+.footer-logo{
+  display: block;
+  margin-bottom: 2.5rem;
+  width: 16.3rem;
+  & img {
+    width: 100%;
+    max-width: 313px;
+  }
+}
+.footer-copyright{
+  color: rgba(255, 255, 255, .6);
+  text-align: center;
+  padding: 3rem 0 0 0;
+}
+
+// kv
+.kv{
+  contain: size;
+  content-visibility: auto;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  height: 100vh;
+  & .kv-img{
+    position: absolute;
+    left: 0;
+    bottom: auto;
+    max-width: 100%;
+    width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    aspect-ratio: auto 1900 / 1144;
+    height: 1144px;
+    z-index: -1;
+  }
+}
+.kv-title-wrap{
+  overflow: hidden;
+  margin-top: 23%;
+  position: relative;
+  
+}
+.kv-title{  
+  color: @secondary-color;
+  font-weight: 300;
+  font-style: italic;
+  font-size: 6.7rem;
+  text-align: center;
+  margin: 0;
+  line-height: 1;
+}
+.kv-title-word{
+  display: inline-block;
 }
