--- a/src/less/var.less
+++ b/src/less/var.less
@@ -16,3 +16,5 @@
 @template-nav-bg-color :transparent;
 @secondary-color: #FABF35;
 @primary-color-dark: #004F68;
+@container-left-right-padding: 9.5rem;
+@section-top-bottom-padding: 9rem;
