--- a/src/less/var.less
+++ b/src/less/var.less
@@ -18,3 +18,4 @@
 @primary-color-dark: #004F68;
 @container-left-right-padding: 9.5rem;
 @section-top-bottom-padding: 9rem;
+@text-color-light: #535B5C;
