--- a/src/less/main.less
+++ b/src/less/main.less
@@ -28,13 +28,21 @@ body{
 body::-webkit-scrollbar-track-piece{
   background-color: transparent;
 }
+body{
+  // transition: padding .2s ease-in;
+}
+.body-padding{
+  padding-top: 75px;
+  
+}
+
 // page-transition
 .preloader {
   top: -1%;
   height: 102%;
   position: fixed;
   pointer-events: none;
-  z-index: -1;
+  z-index: 9999;
 }
 .preloader, .preloader-line {
   left: 0;
@@ -58,7 +66,7 @@ body::-webkit-scrollbar-track-piece{
 .preloader-line div {
   width: 100%;
   height: 100%;
-  background: #000;
+  background: @primary-color-dark;
   transition: all 2s;
   transform: translate(-100%);
 }
@@ -92,18 +100,24 @@ body::-webkit-scrollbar-track-piece{
 }
 .page-transition-enter-active {
   opacity: 0;
-  transition: all .5s;
+  transition: all 1s;
 }
 .page-transition-enter-done{
   opacity: 1;
-  transition: all .5s;
 }
-.page-transition-exit, .page-transition-exit-active{
+.page-transition-exit{
+  position: absolute;
+  left: 0;
+  top: 0;
   opacity: 1;
-  z-index: 999;
+  z-index: 99;
+}
+.page-transition-exit-active{
+  opacity: 1;
+  transition: all 1s;
 }
 .page-transition-exit-done{
-  opacity: 1;
+  opacity: 0;
 }
 
 // btn
@@ -123,12 +137,21 @@ body::-webkit-scrollbar-track-piece{
 .ant-input{
   background-color: #F4F7F8;
   border: 1px solid rgba(0,0,0,0.01);
+  &:hover{
+    border: 1px solid rgba(0,0,0,0.2);
+  }
+  &:focus{
+    border: 1px solid rgba(0,0,0,0.2);
+  }
 }
 
 //container
 .container{
   width: 100%;
   padding: 0 @container-left-right-padding;
+}
+.section-title-wrap{
+  overflow: hidden;
 }
 .section-title{
   font-weight: 500;
@@ -148,15 +171,64 @@ section{
     background-color: @text-color;
   }
 }
+
+//box
+.box{
+  position: relative;
+  width: 100%;
+  box-shadow: 30px 30px 90px rgba(0, 0, 0, 0.12);
+}
+.box-content{
+  padding: 3.2rem 2rem 3.2rem 2rem;
+  min-height: 19rem;
+  text-align: center;
+  & h3{
+    position: relative;
+    font-size: 1.66rem;
+    margin-bottom: 1.6rem;
+    padding: 0 4.4rem;
+    line-height: 1.4;
+    &::after{
+      content: '';
+      display: block;
+      margin: 0.5rem auto;
+      width: 2rem;
+      height: 4px;
+      background-color: @secondary-color;
+    }
+  }
+  & p{
+    font-size: 1.04rem;
+    margin-bottom: 0;
+    padding: 0 2rem;
+    color: @text-color-light;
+  }
+}
+.box-photo{
+  width: 100%;
+  border: 0.52rem solid transparent;
+  position: relative;
+  overflow: hidden;
+  min-height: 18.2rem;
+  & img{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+  }
+}
 // page-title
 .page-title{
   display: flex;
   justify-content: center;
-  align-items: center;
-  min-height: 42vh;
+  align-items: flex-end;
+  padding-bottom: 7.5rem;
+  min-height: 47vh;
   & h1{
     color: @text-color;
     font-size: 4.16rem;
+    margin: 0;
+    line-height: 1;
   }
 }
 // breadcrumb
@@ -361,15 +433,6 @@ section{
 }
 
 .header {
-  background: @template-nav-bg-color;
-  width: 100%;
-  z-index: 1;
-  box-shadow: 0 5px 8px fade(#000, 15);
-  position: relative;
-  top: 0;
-  .home-page {
-    padding: 0 24px;
-  }
   &-logo {
     display: flex;
     align-items: center;
@@ -605,9 +668,9 @@ section{
   color: @secondary-color;
   font-weight: 300;
   font-style: italic;
-  font-size: 6rem;
+  font-size: 5.7rem;
   text-align: center;
-  margin: 0;
+  margin: 1rem 0 0 0;
   line-height: 1;
   letter-spacing: -0.2rem;
 }
@@ -648,7 +711,7 @@ section{
   margin-bottom: 2rem;
 }
 .showNum-icon{
-  font-size: 3rem;
+  font-size: 2.6rem;
   line-height: 1;
   color: @secondary-color;
 }
@@ -662,6 +725,88 @@ section{
 }
 
 // news-section
+.news-section{
+  padding: 9rem 0 0 0;
+}
+.news-item{
+  display: flex;
+  border-bottom: 1px solid #BABDBE;
+  padding-bottom: 2.1rem;
+  margin-bottom: 2.1rem;
+}
+.news-item-date{
+  width: 20%;
+  text-align: left;
+  color: #A9ACAD;
+  padding-top: 0.5rem;
+}
+.news-item-date-day{
+  font-size: 3.33rem;
+  font-weight: 400;
+  line-height: 0.8;
+}
+.news-item-date-month{
+  font-size: 1.1rem;
+  font-weight: 400;
+  line-height: 1;
+}
+.news-item-content{
+  width: 80%;
+  &.with-photo{
+    padding-right: 2rem;
+    width: 60%;
+    & h3{
+      display: -webkit-box;
+      max-height: 2.4em;
+      line-height: 1.3;
+      -webkit-line-clamp: 2;
+      margin-bottom: 0.5rem;
+      -webkit-box-orient: vertical;
+      white-space: normal;
+    }
+    & p{
+      display: -webkit-box;
+      max-height: 3em;
+      line-height: 1.6;
+      -webkit-line-clamp: 2;
+      margin-bottom: 0.8rem;
+      -webkit-box-orient: vertical;
+      white-space: normal;
+      margin-bottom: 0;
+    }
+  }
+  & h3{
+    font-size: 1.25rem;
+    white-space: nowrap;
+    overflow:hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+    margin-bottom: 0;
+  }
+  & p{
+    font-size: 0.93rem;
+    white-space: nowrap;
+    overflow:hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+  }
+}
+.news-item-photo{
+  width: 20%;
+  height: 0;
+  overflow: hidden;
+  position: relative;
+  padding-top: 16.8%;
+  & img{
+    position: absolute;
+    left: -100%;
+    right: -100%;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    max-height: 100%;
+  }
+}
 
 // service-section
 .service-section{
