--- a/src/less/main.less
+++ b/src/less/main.less
@@ -28,12 +28,38 @@ body{
 body::-webkit-scrollbar-track-piece{
   background-color: transparent;
 }
-body{
-  // transition: padding .2s ease-in;
-}
 .body-padding{
   padding-top: 75px;
   
+}
+//header-dropmenu
+.header-dropbtn{
+  &:hover .header-dropmenu, &:focus .header-dropmenu{
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+.header-dropmenu{
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all .3s;
+  padding: 1.8rem;
+  margin: 49.9% 0 0 0;
+  list-style: none;
+  position: absolute;
+  left: -50%;
+  right: -50%;
+  top: 0;
+  background-color: #fff !important;
+  text-align: center;
+  & li{
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    & a{
+      color: @text-color !important;
+    }
+  }
 }
 
 // page-transition
@@ -89,6 +115,9 @@ body{
   100%{
     transform: translate(100%);
   }
+}
+.page-scroll{
+  height: 100vh;
 }
 .page-transition-appear, .page-transition-appear-active,.page-transition-appear-done{
   opacity: 1;
@@ -199,6 +228,7 @@ section{
   }
   & p{
     font-size: 1.04rem;
+    line-height: 1.4;
     margin-bottom: 0;
     padding: 0 2rem;
     color: @text-color-light;
@@ -215,6 +245,7 @@ section{
     left: 0;
     top: 0;
     width: 100%;
+
   }
 }
 // page-title
@@ -403,7 +434,7 @@ section{
 .header-container{
     position: relative;
     padding: 1.4rem 3rem 0.6rem 3rem;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .header-menu{
@@ -481,7 +512,7 @@ section{
   background-color: #fff;
   position: absolute;
   width: 1px;
-  height: 300%;
+  height: 100%;
   left: 0;
   top: 0;
   transition: all .3s;
@@ -498,88 +529,36 @@ section{
   // box-shadow: 0 10px 15px rgba(0,0,0,0.05);
 }
 
-@media screen and (max-width: 767px) {
-  .header {
-    &-logo {
-      z-index: 101;
-    }
-    &.home-page-wrapper .home-page {
-      padding: 0 24px;
-    }
-    &-menu {
-      height: auto;
-      float: inherit;
-      position: relative;
-      left: -24px;
-      width: ~"calc(100% + 48px)";
-      opacity: 0;
-      overflow: hidden;
-      transition: opacity .3s @ease-in-out;
-      .menu-item {
-        display: block;
-        width: 100%;
-        padding: 0 24px;
-        border-bottom: none;
-        line-height: 40px;
-        height: 40px;
-        margin: 4px 0 8px;
-        &.active, &:hover {
-          border: none;
-          background: @primary-color;
-          color: #0d0d0d;
-        }
-      }
-    }
-    &-mobile-menu {
-      width: 16px;
-      height: 14px;
-      cursor: pointer;
-      position: absolute;
-      top: 24px;
-      right: 24px;
-      z-index: 100;
-      em {
-        display: block;
-        width: 100%;
-        height: 2px;
-        background: #0d0d0d;
-        margin-top: 4px;
-        transition: transform .3s @ease-in-out, opacity .3s @ease-in-out;
-      }
-      :first-child {
-        margin-top: 0;
-      }
-      &.open {
-        height: auto;        
-        em {
-            &:nth-child(1) {
-              transform: translateY(6px) rotate(45deg);
-            }
-            &:nth-child(2) {
-              opacity: 0;
-            }
-            &:nth-child(3) {
-              transform: translateY(-6px) rotate(-45deg);
-            }
-        }      
-        
-        opacity: 1;
-        pointer-events: auto;
-        
-      }
-    }
-    
-  }
-}
-
 // footer
-.footer{
-  font-size: 0.93rem;
-  padding: 12.5rem 0 4.125rem 0;
+.footer{  
+  padding: 5rem 0 1.5rem 0;
   background-color: @primary-color-dark;
+  line-height: 1.2;
   color: rgba(255, 255, 255, .6);
-  & p{
+  & .footer-link{
     font-weight: 300;
+    margin-bottom: 0.5rem;
+    font-size: 0.73rem;
+    display: block;
+    padding-left: 1rem;
+    position: relative;
+    &:hover .footer-link-img{
+      opacity: 1;
+      transform: rotate(180deg) translateX(-0.3rem);
+    }
+  }
+  .footer-link-img{
+    width: 0.35rem;
+    height: 0.676rem;
+    transform: rotate(180deg);
+    transition: all 0.1s ease-out;
+    position: absolute;
+    opacity: .6;
+    top: 0.2rem;
+    left: 0;
+    & img{
+      width: 100%;
+    }
   }
   & a{
     color: rgba(255, 255, 255, .6);
@@ -588,20 +567,25 @@ section{
     color: rgba(255, 255, 255,1);
   }
   & h6{
-    font-size: 1.25rem;
+    font-size: 0.9375rem;
     color: rgba(255, 255, 255, .6);
+    margin-bottom: 1rem;
   }
   & .ant-row{
     margin-bottom: 3rem;
   }
+  & .ant-row + .ant-row{
+    margin-bottom: 0;
+  }
   & .ant-divider{
     border-top: 1px solid rgba(255, 255, 255, .3);
+    margin: 0.6rem 0;
   }
 }
 .footer-logo{
   display: block;
   margin-bottom: 2.5rem;
-  width: 12rem;
+  width: 11rem;
   & img {
     width: 100%;
     max-width: 313px;
@@ -609,8 +593,10 @@ section{
 }
 .footer-copyright{
   color: rgba(255, 255, 255, .6);
-  text-align: center;
-  padding: 3rem 0 0 0;
+  text-align: left;
+  font-size: 0.73rem;
+  padding: 1.4rem 0 0 0;
+  font-size: 0.93rem;
 }
 
 // kv
@@ -688,7 +674,6 @@ section{
 
 // about-section
 .about-section{
-  min-height: 100vh;
   overflow: hidden;
 }
 .about-bg{
