--- a/src/less/main.less
+++ b/src/less/main.less
@@ -140,6 +140,7 @@ body::-webkit-scrollbar-track-piece{
   top: 0;
   opacity: 1;
   z-index: 99;
+  right: 0;
 }
 .page-transition-exit-active{
   opacity: 1;
