--- a/src/less/main.less
+++ b/src/less/main.less
@@ -32,35 +32,6 @@ body::-webkit-scrollbar-track-piece{
   padding-top: 75px;
   
 }
-//header-dropmenu
-.header-dropbtn{
-  &:hover .header-dropmenu, &:focus .header-dropmenu{
-    opacity: 1;
-    transform: translateY(0px);
-  }
-}
-.header-dropmenu{
-  opacity: 0;
-  transform: translateY(20px);
-  transition: all .3s;
-  padding: 1.8rem;
-  margin: 49.9% 0 0 0;
-  list-style: none;
-  position: absolute;
-  left: -50%;
-  right: -50%;
-  top: 0;
-  background-color: #fff !important;
-  text-align: center;
-  & li{
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-    & a{
-      color: @text-color !important;
-    }
-  }
-}
 
 // page-transition
 .preloader {
@@ -153,6 +124,7 @@ body::-webkit-scrollbar-track-piece{
 // btn
 .ant-btn{
   height: auto;
+  font-size: 1rem;
 }
 .ant-btn-secondary{
   background: @secondary-color;
@@ -237,14 +209,18 @@ section{
 }
 .box-photo{
   width: 100%;
+  height: 0;
   border: 0.52rem solid transparent;
   position: relative;
   overflow: hidden;
-  min-height: 18.2rem;
+  padding-top: 67.5%;
   & img{
     position: absolute;
     left: 0;
     top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
     width: 100%;
 
   }
@@ -254,13 +230,15 @@ section{
   display: flex;
   justify-content: center;
   align-items: flex-end;
-  padding-bottom: 7.5rem;
-  min-height: 47vh;
+  padding-bottom: 6.5rem;
+  padding-top:8rem;
+  min-height: 30rem;
   & h1{
     color: @text-color;
     font-size: 4.16rem;
     margin: 0;
     line-height: 1;
+    text-align: center;
   }
 }
 // breadcrumb
@@ -355,6 +333,7 @@ section{
   }
   & p{
     margin: 0;
+    font-size: 1rem;
   }
   & i{
     display: block;
@@ -377,8 +356,16 @@ section{
   z-index: 99;
   background-color: #fff;
   transition: all .3s;
-  position: relative;
+  position: fixed;
   width: 100%;
+  height: 5.46875rem;
+  border-bottom: 1px solid transparent;
+  & .header-dropmenu a{
+    color: @text-color !important;
+  }
+  & .ant-row{
+    height: 100%;
+  }
   & .logo-wrap{
     display: inline-block;
     transition: all .3s;
@@ -405,6 +392,28 @@ section{
       width: 100%;
     }
   }
+  &.open{
+    transition: all .1s;
+    border-bottom: 1px solid #ddd;
+    background-color: #fff;
+    & li a{
+      color: @text-color;
+      transition-delay: .1s
+    }
+    & .header-rightline{
+      transform: scaleY(0);      
+    }
+    & .header-bottomline{
+      transform: scaleX(0);
+    }
+    & .logo-wrap{
+      width: 100%;
+      transition-delay: .3s;
+    }
+    & .logo-w-wrap{
+      width: 0;
+    }
+  }
   &.scroll {
     position: fixed;
     top: 0;
@@ -416,7 +425,7 @@ section{
       height: 100%;
     }
     & .header-rightline{
-      transform: scaleY(0);
+      transform: scaleY(0);      
     }
     & .header-bottomline{
       transform: scaleX(0);
@@ -431,11 +440,10 @@ section{
   }
 }
 
-
 .header-container{
     position: relative;
-    padding: 1.4rem 3rem 0.6rem 3rem;
-    // overflow: hidden;
+    padding: 0rem 3rem 0rem 3rem;
+    height: 100%;
 }
 
 .header-menu{
@@ -453,13 +461,12 @@ section{
     & li{
         position: relative;
         padding: 0 1.56rem;
+        height: 100%;
+        line-height: 5.4rem;
         & a{
             font-size: 0.8rem;
             padding: 0;
             display: inline-block;
-            &:hover,:active{
-              color: @secondary-color;
-            }
         }
     }
 }
@@ -475,7 +482,7 @@ section{
       width: 8.8rem;
     }
     & a {
-      display: block;
+      display: flex;
     }
   }
   &-menu {
@@ -513,10 +520,11 @@ section{
   background-color: #fff;
   position: absolute;
   width: 1px;
-  height: 100%;
+  height: 70%;
   left: 0;
-  top: 0;
+  bottom: 1px;
   transition: all .3s;
+  transform-origin: bottom;
 }
 .header-bg{
   background-color: #fff;
@@ -528,6 +536,99 @@ section{
   transition: height .3s;
   transition-delay: .3s;
   // box-shadow: 0 10px 15px rgba(0,0,0,0.05);
+}
+//header-dropmenu
+.header-dropbtn{
+  position: relative;
+  &::after{
+    width: 100%;
+    height: 1px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    transform: scaleX(0);
+    transition: all .3s;
+    transition-delay: 0.1s;
+    content: '';
+  }
+  &.open::after{
+    transform: scaleX(1);
+    background-color: @secondary-color;
+  }
+ 
+}
+.header-dropmenu{
+  z-index:99;
+  opacity: 0;
+  height: auto;
+  list-style: none;
+  text-align: center; 
+  position: absolute;
+  width: 200%;
+  left: 50%;
+  top: 100%;
+  -webkit-transform: translateX(-50%) scaleY(0);
+  -ms-transform: translateX(-50%) scaleY(0);
+  transform: translateX(-50%) scaleY(0);
+  transform-origin: top;
+  padding: 0;
+  line-height: 1.6;
+  transition: .2s;  
+  overflow: hidden;
+  &.open{
+    -webkit-transform: translateX(-50%) scaleY(1);
+    -ms-transform: translateX(-50%) scaleY(1);
+    transform: translateX(-50%) scaleY(1);
+    opacity: 1;
+    padding: 1.25rem 0;
+    & .header-dropmenu-bg{
+      transform: scaleY(1);
+    }
+  }
+  & li{
+    padding: 0;
+    line-height: 1.6;
+  }
+}
+.header-dropmenu-bg{
+  background-color: #fff;
+  transform-origin: top;
+  transform: scaleY(0);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+  transition: all .2s;
+  top:0;
+  left: 0;
+  right: 0;
+}
+.header-menuline{
+  position: absolute;
+  bottom: -1px;
+  left: 50%;
+  width: 0;
+  height: 1px;
+  transition: all 0.5s ease-in-out;
+  background-color: @secondary-color;
+}
+.header-dropbg{
+  width: 100%;
+  height: 0;
+  z-index: 9;
+  opacity: 0;
+  background-color: #fff;
+  position: fixed;
+  top: 4.9rem;
+  left: 0;
+  right: 0;
+  box-shadow: 0px 12px 12px -17px rgb(0 0 0 / 25%);
+  transition: all .2s;
+  &.open{
+    height: 190px;
+    opacity: 1;
+  }
 }
 
 // footer
@@ -585,7 +686,7 @@ section{
 }
 .footer-logo{
   display: block;
-  margin-bottom: 2.5rem;
+  margin-bottom: 4.5rem;
   width: 11rem;
   & img {
     width: 100%;
@@ -660,6 +761,9 @@ section{
   margin: 1rem 0 0 0;
   line-height: 1;
   letter-spacing: -0.2rem;
+  & br{
+    display: none;
+  }
 }
 .kv-subtitle{
   font-size: 1.6rem;
@@ -671,6 +775,9 @@ section{
 }
 .kv-title-word{
   display: inline-block;
+  &:nth-child(5),&:nth-child(6),&:nth-child(7){
+    padding-right: 2rem;
+  }
 }
 
 // about-section
@@ -690,11 +797,15 @@ section{
   height: calc(60rem + 160px);
   z-index: -1;
 }
-.showNum-wrap{
-  margin-top: 6.25rem;
+.first-section-p{
+  font-size: 1rem;
 }
 .showNum{
   margin-bottom: 2rem;
+  text-align: center;
+}
+.showNum-wrap{
+  margin-top: 6.25rem;
 }
 .showNum-icon{
   font-size: 2.6rem;
@@ -751,8 +862,7 @@ section{
       white-space: normal;
     }
     & p{
-      display: -webkit-box;
-      max-height: 3em;
+      display: -webkit-box;      
       line-height: 1.6;
       -webkit-line-clamp: 2;
       margin-bottom: 0.8rem;
@@ -841,7 +951,7 @@ section{
   justify-content: center;
   align-items: center;
   & img{
-    width: 2.08rem;
+    width: 50%;
   }
 }
 
@@ -858,6 +968,7 @@ section{
   padding-bottom: 3.5rem;
   height: 100%;
   line-height: 1.4;
+  font-size: 1rem;
   & h4{
     font-weight: 500;
     margin-bottom: 0;
@@ -878,6 +989,7 @@ section{
 }
 .page-contact-form{
   padding: 0 0 12rem 0;
+  font-size: 1rem;
   & h3{
     margin-bottom: 2.08rem;
     font-size: 1.25rem;
@@ -885,4 +997,10 @@ section{
   & .ant-row + .ant-row{
     margin-top: 1.25rem;
   }
+}
+.ant-form-item-label > label{
+  font-size: 1rem;
+}
+.ant-input::placeholder{
+  font-size: 1rem;
 }
