--- a/src/less/rwd.less
+++ b/src/less/rwd.less
@@ -185,6 +185,11 @@
   .news-section{
     padding: 8rem 0 0 0;
   }
+  .view-img-wrap{
+    max-width: 100%;
+    margin-top: 1rem;
+    padding-top: 65%;
+  }
   .page-contact .ant-col{
     margin-bottom: 2rem;
   }
@@ -307,6 +312,34 @@
   .service-section .btn-more.white p{
     color: @text-color;
   }
+  .company-section-txt{
+    text-align: left;
+    font-size: 1rem;
+  }
+  .page-about-section h2{
+    text-align: center;
+    font-size: 2.6rem;
+  }
+  .page-title-link{
+    font-size: 0.75rem;
+    text-align: center;
+  }
+  .team-box-txt-description{
+    text-align: left;
+    font-size: 1rem;
+  }
+  .spirits-section::after{
+    height: 15%;
+  }
+  .spirits-photo img:nth-child(3){
+    display: none;
+  }
+  .spirits-section p{
+    margin-bottom: 2rem;
+  }
+  .spirits-photo img{
+    transform: translate3d(0px, 0px, 0px) !important;
+  }
   .ant-back-top{
     right: 20px;
     bottom: 20px;
@@ -320,4 +353,5 @@
   .footer-copyright{
     font-size: 0.73rem;
   }
+
 }
