--- a/src/less/main.less
+++ b/src/less/main.less
@@ -267,6 +267,9 @@ section{
     display: inline-block;
     padding: 0 0.7rem;
   }
+  & li a{
+    font-size: 0.8rem;
+  }
 }
 .page-kv{ 
   position: relative;
@@ -282,7 +285,7 @@ section{
     width: 100%;
     left: 0;
     right: 0;
-    top: 0;
+    bottom: 0;
   }
   & .btn-more{
     position: absolute;
@@ -295,15 +298,18 @@ section{
     & i{
       margin: -0.56875rem 0 0 -0.8125rem;
     }
+    & .arrow-right{
+      height: 0.73rem;
+    }
     & .btn-more-wrap{
       background-color: @secondary-color;
       border-radius: 100%;
-      width: 4.125rem;
-      height: 4.125rem;
+      width: 3.125rem;
+      height: 3.125rem;
       & svg{
         width: 100%;
         height: 100%;
-      }
+      }      
     }
   }
 }
@@ -1091,7 +1097,7 @@ section{
   margin-left: auto;
   & img{
     position: absolute;
-    top: 0;
+    bottom: 0;
     width: 100%;
   }
 }
@@ -1138,6 +1144,7 @@ section{
   }
   & p{
     text-align: center;
+    margin-bottom: 0;
   }
   &::after{
     content: '';
@@ -1159,30 +1166,139 @@ section{
   & img{
     position: absolute;
     top: 0;
-    width: 100%;    
+    width: 100vw;    
   }
 }
 .spirits-photo{
   position: relative;
   height: 0;
-  padding-top: 48%;
-  
+  padding-top: 42%;
+  overflow: hidden;
   & img{
     position: absolute;
     width: 100%;
     left: 0;
     bottom: 0;    
+    z-index: -1;
+    &:nth-child(1){
+      height: 41.7vw;
+    }
     &:nth-child(2){
-      z-index: 2;
-      top: 0;
+      height: 35.3vw;
+      z-index: 0;
+      top: -50px;
       bottom: auto;      
     }
     &:nth-child(3){
       z-index: 9;
+      height: 26.1vw;
     }
   }
 }
 .history-section{
   color: #fff;
   background-color: @primary-color-dark;
+  border-bottom: 1px solid rgba(255, 255, 255, .3);
+  & h2{
+    text-align: center;
+    color: #fff;
+    margin-bottom: 4rem;
+  }
+}
+.history-box{
+  width: 100%;
+  margin: 0 0 0 auto;
+  
+  &:first-child .line > span{
+    top: 0.5rem;
+    &::after{
+      top: -0.3rem;
+    }
+    &::before{
+      top: -0.383rem;
+      border: 0.45rem solid rgba(255, 255, 255, .7);
+    }
+  }
+  &:last-child .line > span{
+    background: linear-gradient(0deg,transparent,rgba(255, 255, 255, .7));    
+  }
+}
+.history-box-item{
+  width: 100%;
+  min-height: 7rem;
+  display: flex;
+  
+  & .year{
+    width:49.5%;
+    font-size: 1.666rem;
+    font-weight: 400;
+    text-align: right;
+    padding-right: 4rem;
+    letter-spacing: 0.1rem;
+    line-height: 1.1;
+  }
+  & .line{
+    position: relative;
+    width:5%;
+    & span{
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      width: 1px;    
+      background: rgba(255, 255, 255, .7);
+      display: block;
+      &::before{
+        content: '';
+        display: block;
+        width: 1.14rem;
+        height: 1.14rem;
+        background-color: transparent;
+        border-radius: 100%;
+        position: absolute;
+        left: -0.555rem;
+        top: 0.25rem;
+        // border: 0.2rem solid transparent;
+        z-index: 1;
+      }
+      &::after{
+        content: '';
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        background-color: @secondary-color;
+        border-radius: 100%;
+        position: absolute;
+        left: -0.49rem;
+        top: 0.3rem;
+        border: 0.3rem solid @primary-color-dark;
+        z-index: 2;
+      }
+    }
+  }
+  & .description{
+    width: 45.5%;
+    & {
+      font-size: 0.9375rem;
+      color: rgba(255, 255, 255, .7);
+    }
+    
+  }
+}
+
+// news page
+.page-news-section{
+  padding-top: 0;
+}
+.page-news-content{
+  border-top: 3px solid @text-color;
+  padding-top: 5rem;
+}
+.page-news-list .news-item{
+  padding-bottom: 1.4rem;
+  margin-bottom: 1.4rem;
+}
+.pagination{
+  text-align: center;
+  margin-top: 5rem;
 }
