--- a/src/less/rwd.less
+++ b/src/less/rwd.less
@@ -10,7 +10,7 @@
   .header-bottomline{
     margin: 0 2rem;
   }
-  .container{
+  .container, .container-s{
     padding: 0 5rem;
   }
   section{
@@ -204,7 +204,7 @@
   .header-bottomline{
     margin: 0 1.2rem;
   }
-  .container{
+  .container, .container-s{
     padding: 0 1.6rem;
   }
   section{
@@ -218,8 +218,25 @@
     font-size: 2.8rem;
     margin-bottom: 1.5rem;
   }
+  .page-title{
+    padding: 7rem 0 2rem 0;
+    min-height: 10rem;
+  }
   .page-title h1{
     font-size: 2.5rem;
+  }
+  .page-news-content{
+    padding-top: 2rem;
+  }
+  .pagination{
+    margin-top: 3rem;
+  }
+  .page-news-list .news-item{
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+  }
+  .breadcrumb{
+    margin: 1rem 0;
   }
   .btn-more{
     margin-bottom: 3rem;
@@ -289,6 +306,9 @@
   .news-item-content.with-photo{
     width: 75%;
   }
+  .news-page-hot .news-item{
+    padding-bottom: 1rem;
+  }
   .box-content{
     padding: 2.4rem 1.6rem;
     min-height: 15rem;
@@ -343,6 +363,31 @@
   .ant-back-top{
     right: 20px;
     bottom: 20px;
+  }
+  .ant-pagination-item, .ant-pagination-prev, .ant-pagination-next, .ant-pagination-jump-prev, .ant-pagination-jump-next{
+    min-width: 2.35rem;
+    width: 2.35rem;
+    height: 2.35rem;
+    line-height: 2.35rem;
+  }
+  .news-item-date-day{
+    font-size: 2.5rem;
+  }
+  .news-item-date-month{
+    font-size: 0.6rem;
+  }
+  .page-news-list .news-item .news-item-date::after{
+    right: 18%;
+  }
+  .news-page-box{
+    padding: 2rem;
+  }
+  .news-page-box-title h1{
+    font-size: 1.5rem;
+  }
+  .news-page-box-title h1::after{
+    left: -2rem;
+    width: 5px;
   }
   .footer h6{
     font-size: 1.2rem;
