--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1106,7 +1106,7 @@ section{
   }
 }
 .company-section-txt{
-  text-align: center;
+  text-align: left;
   font-size:  1.25rem;
   line-height: 1.8;
   color: @text-color;
@@ -1158,6 +1158,7 @@ section{
 }
 .team-box-txt-description{
   font-size: 0.833rem;
+  text-align: left;
 }
 .spirits-section{
   position: relative;
@@ -1367,7 +1368,7 @@ section{
 }
 .news-page-box{
   background-color: #fff;
-  box-shadow:  0px 0px 70px rgba(0, 0, 0, 0.12);
+  box-shadow:  0px 0px 40px rgba(0, 0, 0, 0.12);
   padding: 3.5rem;
   margin-bottom: 2rem;
 }
