--- a/src/less/var.less
+++ b/src/less/var.less
@@ -4,8 +4,8 @@
 @warning-color: #FABF35; // 警告色
 @error-color: #f5222d; // 错误色
 @font-size-base: 1vw; // 主字号
-@heading-color: #0d0d0d; // 标题色
-@text-color: #0d0d0d; // 主文本色
+@heading-color: #252525; // 标题色
+@text-color: #252525; // 主文本色
 @text-color-secondary: rgba(0, 0, 0, 0.45); // 次文本色
 @disabled-color: rgba(0, 0, 0, 0.25); // 失效色
 @border-radius-base: 2px; // 组件/浮层圆角
