--- a/src/less/main.less
+++ b/src/less/main.less
@@ -266,7 +266,7 @@ section{
 }
 .page-title-link{
   display: block;
-  margin: 0.5rem 0 0 0;
+  margin: 1rem 0 0 0;
   padding: 0;
   list-style: none;
   & li{
@@ -1449,5 +1449,33 @@ section{
   & figcaption{
     color: @text-color-light;
     font-size: 0.833rem;
+  }
+}
+
+.page-service-section{
+  color: @text-color-light;
+  font-size:  1rem;
+  & h2{
+    color: @text-color;
+    font-size: 2.08rem;
+    line-height: 1.2;
+    letter-spacing: 0.02rem;
+    margin-bottom: 3.6rem;
+  }
+}
+.service-hash-ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  & li{
+    // border: 1px solid @text-color-light;
+    // background-color: #ddd;
+    // padding: 0.4rem 0.8rem 0.2rem 0.8rem;
+    line-height: 1;
+    border-radius: 2rem;
+    margin-right: 1rem;
+    font-size: 0.9375rem;
+    color: @primary-color;
   }
 }
