--- a/src/less/rwd.less
+++ b/src/less/rwd.less
@@ -225,6 +225,13 @@
   .page-title h1{
     font-size: 2.5rem;
   }
+  .page-kv .page-kv-img-wrap{
+    padding-top: 80%;
+  }
+  .page-kv .page-kv-img{
+    width: auto;
+    height: 100%;
+  }
   .page-news-content{
     padding-top: 2rem;
   }
@@ -380,14 +387,17 @@
     right: 18%;
   }
   .news-page-box{
-    padding: 2rem;
+    padding: 1.4rem;
   }
   .news-page-box-title h1{
     font-size: 1.5rem;
   }
   .news-page-box-title h1::after{
-    left: -2rem;
+    left: -1.4rem;
     width: 5px;
+  }
+  .wali-img{
+    margin-bottom: 4rem;
   }
   .footer h6{
     font-size: 1.2rem;
