--- a/src/less/main.less
+++ b/src/less/main.less
@@ -124,7 +124,7 @@ body::-webkit-scrollbar-track-piece{
 // btn
 .ant-btn{
   height: auto;
-  font-size: 1rem;
+  font-size: 1rem;  
 }
 .ant-btn-secondary{
   background: @secondary-color;
@@ -144,6 +144,27 @@ body::-webkit-scrollbar-track-piece{
 }
 .ant-anchor-link{
   padding: 0;
+}
+// modal
+.ant-modal-title{
+  font-size: 1.2rem;
+  line-height: 1.2;
+}
+.ant-modal-close{
+  top: 0.4rem;
+}
+.ant-modal-close-x{
+  font-size: 1rem;
+}
+.ant-modal-header{
+  padding: 20px 24px;
+}
+.ant-modal-footer .ant-btn{
+  padding: 6px 15px;
+}
+.modal-list .ant-btn > span{
+  // color: @text-color-light;
+  font-size: 0.9375rem;
 }
 // input
 .ant-input{
@@ -1110,7 +1131,6 @@ section{
   font-size:  1.25rem;
   line-height: 1.8;
   color: @text-color;
-  font-weight: 400;
 }
 .view-img-wrap{
   max-width: 75%;
@@ -1457,10 +1477,11 @@ section{
   font-size:  1rem;
   & h2{
     color: @text-color;
-    font-size: 2.08rem;
+    font-size: 1.8rem;
+    font-weight: 600;
     line-height: 1.2;
     letter-spacing: 0.02rem;
-    margin-bottom: 3.6rem;
+    margin-bottom: 2.4rem;
   }
 }
 .service-hash-ul{
@@ -1468,14 +1489,69 @@ section{
   margin: 0;
   padding: 0;
   display: flex;
+  flex-wrap: wrap;
   & li{
-    // border: 1px solid @text-color-light;
-    // background-color: #ddd;
-    // padding: 0.4rem 0.8rem 0.2rem 0.8rem;
     line-height: 1;
     border-radius: 2rem;
     margin-right: 1rem;
     font-size: 0.9375rem;
-    color: @primary-color;
+    color: #008CB5;
+    margin-bottom: 0.5rem;
   }
+}
+.solar-txt + .solar-txt{
+  margin-top: 3rem;
+}
+.green-img{
+  width: 100%;
+  padding-top: 100%;
+  height: 0;
+  border-radius: 50%;
+  overflow: hidden;
+  position: relative;
+  margin-left: auto;
+  & img{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 110%;
+  }
+}
+.green-txt + .green-txt{
+  margin-top: 3.6rem;
+}
+.wali-img{
+  width: 100%;
+  padding-top: 100%;
+  height: 0;
+  overflow: hidden;
+  position: relative;
+  margin-left: auto;
+  & img{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 110%;
+  }
+}
+.lightdonate-section{
+  position: relative;
+  & .service_img{
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: -1;
+    background: 50% 50% no-repeat;
+  }
+}
+.lightdonate-txt{
+  margin-bottom: 2.4rem;
+}
+.lightdonate-margin{
+  margin-bottom: 20rem;
 }
